Formatted code with eslint rules.
