# models/contactsModel.js
@@ -16,44 +16,66 @@ const getOneContact = async (contactId) => {
 }
 
 const addNewContact = async (contactData) => {
-  const {firstName, lastName, email, favoriteColor, birthDay} = contactData
-  if(!firstName || !lastName || !email || !favoriteColor || !birthDay){
-    throw new Error("You must insert all the fields, they are all required")
+  const { firstName, lastName, email, favoriteColor, birthDay } = contactData
+  if (!firstName || !lastName || !email || !favoriteColor || !birthDay) {
+    throw new Error('You must insert all the fields, they are all required')
   }
-  const result = await mongodb.getDb().collection('contacts').insertOne(contactData)
+  const result = await mongodb
+    .getDb()
+    .collection('contacts')
+    .insertOne(contactData)
   return result.insertedId
 }
 
-const  updateContact = async (contactId, updatedData) => {
-  if(!ObjectId.isValid(contactId)){
-    throw new Error("The contact ID is invalid")
+const updateContact = async (contactId, updatedData) => {
+  if (!ObjectId.isValid(contactId)) {
+    throw new Error('The contact ID is invalid')
   }
-  const {firstName, lastName, email, favoriteColor, birthDay} = updatedData
+  const { firstName, lastName, email, favoriteColor, birthDay } = updatedData
   // if(!firstName || !lastName || !email || !favoriteColor || !birthDay){
   //   throw new Error("You must insert all the fields, they are all required")
   // }
-  const result = await mongodb.getDb().collection('contacts').updateOne({_id: new ObjectId(contactId)}, { $set: updatedData })
+  const result = await mongodb
+    .getDb()
+    .collection('contacts')
+    .updateOne({ _id: new ObjectId(contactId) }, { $set: updatedData })
   if (result.matchedCount === 0) {
-    throw new Error("No contact found with the given ID");
+    throw new Error('No contact found with the given ID')
   }
 
   if (result.modifiedCount === 0) {
-    return { message: "No changes made. The contact data is already up to date." };
+    return {
+      message: 'No changes made. The contact data is already up to date.'
+    }
   }
 
-  return { message: "Contact updated successfully", modifiedCount: result.modifiedCount };
+  return {
+    message: 'Contact updated successfully',
+    modifiedCount: result.modifiedCount
+  }
 }
 
-
-const deleteContact =  async (contactId) => {
-    if(!ObjectId.isValid(contactId)){
-      throw new Error("No contact found with this given ID")
-    }
-    const result = await mongodb.getDb().collection('contacts').deleteOne({_id: new ObjectId(contactId)})
-    if( result.deletedCount === 0){
-      throw new Error("No contact found with this given ID")
-    }
-    return {message: "Contact deleted successfully", deletedCount: result.deletedCount }
+const deleteContact = async (contactId) => {
+  if (!ObjectId.isValid(contactId)) {
+    throw new Error('No contact found with this given ID')
+  }
+  const result = await mongodb
+    .getDb()
+    .collection('contacts')
+    .deleteOne({ _id: new ObjectId(contactId) })
+  if (result.deletedCount === 0) {
+    throw new Error('No contact found with this given ID')
+  }
+  return {
+    message: 'Contact deleted successfully',
+    deletedCount: result.deletedCount
+  }
 }
 
-module.exports = { getAllContacts, getOneContact, addNewContact, updateContact, deleteContact}
+module.exports = {
+  getAllContacts,
+  getOneContact,
+  addNewContact,
+  updateContact,
+  deleteContact
+}
